--- a/CSS Exercises/CSS/styles.css
+++ b/CSS Exercises/CSS/styles.css
@@ -2,23 +2,25 @@
   background-color: red;
   height: 200px;
   width: 200px;
-  position: relative;
-    left: 400px;
+  position: absolute;
+  left: 400px;
+  top: 400px;
 }
 
 .middle-box {
   background-color: blue;
   height: 200px;
   width: 200px;
-  position: relative;
-    bottom: 200px;
+  position: absolute;
+  left: 200px;
+  top: 200px;
 }
 
 .bottom-box {
   background-color: yellow;
   height: 200px;
   width: 200px;
-  position: relative;
-    left: 200px;
-    bottom: 400px;
+  position: absolute;
+  left: 0px;
+  top: 0px;
 }
